Modify example notebooks 1,2 and 3 to use the new xtensor structures

--- a/examples/3. Large Scale Routing Simulation.ipynb
+++ b/examples/3. Large Scale Routing Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "f8bacbfb-f9d9-4a08-8a92-f92fd4d77f84",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "import pandas as pd\n",
     "import torch\n",
     "\n",
-    "from diffhydro import LTIStagedRouter, StagedCatchmentInterpolator, TimeSeriesThDF\n",
+    "from diffhydro import LTIStagedRouter, StagedCatchmentInterpolator, DataTensor\n",
     "from diffhydro.utils import Timer, nse_fn\n",
     "from diffhydro.io import read_rapid_graph, read_multiple_rapid_graphs"
    ]
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "5a0af749-c35a-429d-ba40-a1295435f747",
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = Path(\"../data\") # Set your data root path"
+    "root = Path(\"../../../DiffHydro/examples/data\") # Set your data root path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "ef393408-63a7-4b06-9ad7-7d6ca0b91487",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "703ed0a6-c4d7-4691-a1ee-d613f334f5cb",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "d31c8ff8-ef30-4b25-a433-07aa7c9269ee",
    "metadata": {},
    "outputs": [],
@@ -153,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "4b96cc85-f9ed-46fc-839e-31327afe6db4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "200281b78f594c2ea0fad00c68287963",
+       "model_id": "d537bbffb68f48da8fa840db1f9eb759",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,7 +181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da6df62fffcf46e4a45cd51d43368909",
+       "model_id": "7f9eddf5ff344b00b352c156dfb3cfcd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76fea6aa5b434fcc8d10b31114fc68d7",
+       "model_id": "7291c8f68fbf471c82ede12ecacaf463",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d9d09f71f404bbc8607c85e1116f57a",
+       "model_id": "4f8e8f4fc30f4b64aad7ce25022d3624",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bc6a5e39f624d29b100f3ab946ff8e2",
+       "model_id": "fa070179d98c4747a5ed6ab874d5335c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39620816d801429e8ba19b3d6850d82d",
+       "model_id": "8432cf665469483bb96b7da7eaceaa36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,7 +290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd1e5528a3a34560bc38118897d5f02c",
+       "model_id": "7214ec9e9ffa43b58262b0e2ba1a07d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -311,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97c1d96cbb7a41f784248a4ee79fea22",
+       "model_id": "20a7046ba19449b4bee7105e9015bf1b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,7 +332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fc7eff8b6a443e2beb9b23365c5dd7b",
+       "model_id": "2947d93104b14aa9a4b713327f457f44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,8 +347,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6min 21s, sys: 1min 38s, total: 8min\n",
-      "Wall time: 8min 6s\n"
+      "CPU times: user 5min 44s, sys: 34.6 s, total: 6min 19s\n",
+      "Wall time: 6min 27s\n"
      ]
     }
    ],
@@ -359,20 +359,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "49b38897-6b55-47ad-abfd-ee24a1c7ca56",
+   "execution_count": 23,
+   "id": "66a2d8b5-832e-4708-9ab6-f7f5b56ded76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pixel_runoff = TimeSeriesThDF.from_pandas(pixel_runoff).to(device)"
+    "pixel_runoff.columns.name = \"spatial\"\n",
+    "pixel_runoff = DataTensor.from_pandas(pixel_runoff).expand_dims(\"batch\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "77a2047c-74d9-4d15-8822-8960fec96fb3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "17a1c209e27f47d68cee609118791121",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/729 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "\"Coordinate value 'Index([ 384432,  386432,  386431,  384433,  386433,  384431,  388432,  388433,\\n       2252272, 2252271,\\n       ...\\n        852386,  852387,  848385, 1164385, 1166385, 1164386, 1166386, 1166384,\\n       1162385, 1162386],\\n      dtype='int64', name='spatial', length=472)' not found.\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/xtensor/src/xtensor/datatensor.py:424\u001b[39m, in \u001b[36mDataTensor._coord_to_index\u001b[39m\u001b[34m(axis_coords, value)\u001b[39m\n\u001b[32m    423\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m424\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43maxis_coords\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    425\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m error:\n",
+      "\u001b[31mValueError\u001b[39m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m cat = \u001b[43mStagedCatchmentInterpolator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpixel_runoff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcat_interp_df\u001b[49m\u001b[43m)\u001b[49m.to(device)\n\u001b[32m      2\u001b[39m model = LTIStagedRouter(max_delay=max_delay, dt=dt).to(device)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/DiffHydro/diffhydro/interp/cat_interp.py:167\u001b[39m, in \u001b[36mStagedCatchmentInterpolator.__init__\u001b[39m\u001b[34m(self, gs, pixel_df, weight_df)\u001b[39m\n\u001b[32m    165\u001b[39m weight_subset = weight_df.loc[g.nodes]\n\u001b[32m    166\u001b[39m pixel_col = input_pixel_idxs[weight_subset[\u001b[33m\"\u001b[39m\u001b[33mpixel_idx\u001b[39m\u001b[33m\"\u001b[39m].unique()]\n\u001b[32m--> \u001b[39m\u001b[32m167\u001b[39m pixel_subset_df = \u001b[43mpixel_df\u001b[49m\u001b[43m.\u001b[49m\u001b[43msel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspatial\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpixel_col\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    169\u001b[39m pixel_idxs.append(torch.from_numpy(pixel_col.values))\n\u001b[32m    170\u001b[39m cis.append(CatchmentInterpolator(g, pixel_subset_df, weight_subset))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/xtensor/src/xtensor/datatensor.py:124\u001b[39m, in \u001b[36mDataTensor.sel\u001b[39m\u001b[34m(self, **indexers)\u001b[39m\n\u001b[32m    123\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msel\u001b[39m(\u001b[38;5;28mself\u001b[39m, **indexers: Any) -> \u001b[33m\"\u001b[39m\u001b[33mDataTensor\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m124\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_select\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindexers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muse_coords\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/xtensor/src/xtensor/datatensor.py:380\u001b[39m, in \u001b[36mDataTensor._select\u001b[39m\u001b[34m(self, indexers, use_coords)\u001b[39m\n\u001b[32m    378\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m dim \u001b[38;5;129;01min\u001b[39;00m indexers:\n\u001b[32m    379\u001b[39m     indexer = indexers[dim]\n\u001b[32m--> \u001b[39m\u001b[32m380\u001b[39m     normalized, coord_values, drop_dim = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_normalize_indexer\u001b[49m\u001b[43m(\u001b[49m\u001b[43maxis_coords\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muse_coords\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    381\u001b[39m     index_tuple.append(normalized)\n\u001b[32m    382\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m drop_dim:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/xtensor/src/xtensor/datatensor.py:408\u001b[39m, in \u001b[36mDataTensor._normalize_indexer\u001b[39m\u001b[34m(self, axis_coords, selector, use_coords)\u001b[39m\n\u001b[32m    405\u001b[39m values = _as_list(selector)\n\u001b[32m    407\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m use_coords:\n\u001b[32m--> \u001b[39m\u001b[32m408\u001b[39m     indices = [\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_coord_to_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43maxis_coords\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m val \u001b[38;5;129;01min\u001b[39;00m values]\n\u001b[32m    409\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    410\u001b[39m     indices = [\u001b[38;5;28mint\u001b[39m(val) \u001b[38;5;28;01mfor\u001b[39;00m val \u001b[38;5;129;01min\u001b[39;00m values]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/xtensor/src/xtensor/datatensor.py:426\u001b[39m, in \u001b[36mDataTensor._coord_to_index\u001b[39m\u001b[34m(axis_coords, value)\u001b[39m\n\u001b[32m    424\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m axis_coords.index(value)\n\u001b[32m    425\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m error:\n\u001b[32m--> \u001b[39m\u001b[32m426\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCoordinate value \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m not found.\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merror\u001b[39;00m\n",
+      "\u001b[31mKeyError\u001b[39m: \"Coordinate value 'Index([ 384432,  386432,  386431,  384433,  386433,  384431,  388432,  388433,\\n       2252272, 2252271,\\n       ...\\n        852386,  852387,  848385, 1164385, 1166385, 1164386, 1166386, 1166384,\\n       1162385, 1162386],\\n      dtype='int64', name='spatial', length=472)' not found.\""
+     ]
+    }
+   ],
    "source": [
     "cat = StagedCatchmentInterpolator(g, pixel_runoff, cat_interp_df).to(device)\n",
     "model = LTIStagedRouter(max_delay=max_delay, dt=dt).to(device)"
