--- a/examples/2. Routing Memory Management.ipynb
+++ b/examples/2. Routing Memory Management.ipynb
@@ -29,7 +29,37 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "root = Path(\"./data\") # Set a data root path with enough disk space (>100MB)"
+    "\n",
+    "import pandas as pd\n",
+    "import xarray as xr\n",
+    "\n",
+    "from diffhydro import (LTIRouter, LTIStagedRouter, DataTensor, StagedCatchmentInterpolator)\n",
+    "from diffhydro.io import read_rapid_graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f247abba-46be-4dde-be8a-c68d7e423c5a",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "449badee-5faf-4280-aa15-556e680ee465",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Routing model parameterss\n",
+    "max_delay = 32\n",
+    "dt = 1/24\n",
+    "# Experiment pathes and variables\n",
+    "device = \"cuda:1\"\n",
+    "root = Path(\"./data\") # Set a data root path with enough disk space (>100MB)\n",
+    "root = Path(\"../../../DiffHydro/examples/data\") # Set a data root path with enough disk space (>100MB)\n",
+    "rapid_path = root / \"geoglows\" / \"rapid_config\" / \"305\""
    ]
   },
   {
@@ -44,10 +74,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "164b6720-c1a0-477f-9a2a-194ac14fc6a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d9eb305cb284303b037bb3cfd38c3cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading 305_daily_sparse_runoff.feather:   0%|          | 0.00/46.0M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ea6bdf540a2455897bd6e6424076b59",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading 305_interp_weight.feather:   0%|          | 0.00/465k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataTensor' object has no attribute 'dtype'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdownload\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m download_single_vpu_data\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mdownload_single_vpu_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroot\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Should format to RAPID.\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/DiffHydro/examples/utils/download.py:149\u001b[39m, in \u001b[36mdownload_single_vpu_data\u001b[39m\u001b[34m(root)\u001b[39m\n\u001b[32m    144\u001b[39m download_zenodo_file(\n\u001b[32m    145\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mhttps://zenodo.org/records/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mZENODO_RECORD\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/files/305_interp_weight.feather\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    146\u001b[39m     \u001b[38;5;28mstr\u001b[39m(dest_path),\n\u001b[32m    147\u001b[39m )\n\u001b[32m    148\u001b[39m download_rapid_config(root, \u001b[32m305\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m149\u001b[39m \u001b[43mprocess_single_vpu_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroot\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/DiffHydro/examples/utils/download.py:128\u001b[39m, in \u001b[36mprocess_single_vpu_data\u001b[39m\u001b[34m(root, device)\u001b[39m\n\u001b[32m    126\u001b[39m g = read_rapid_graph(rapid_path)\n\u001b[32m    127\u001b[39m cat = CatchmentInterpolator(g, pixel_runoff, interp_df).to(device)\n\u001b[32m--> \u001b[39m\u001b[32m128\u001b[39m runoff = \u001b[43mcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpixel_runoff\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    129\u001b[39m \u001b[38;5;66;03m# Dump as netcdf\u001b[39;00m\n\u001b[32m    130\u001b[39m batch_index = runoff.coords[BATCH_DIM][\u001b[32m0\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/conda_envs/diffhydro/lib/python3.13/site-packages/torch/nn/modules/module.py:1773\u001b[39m, in \u001b[36mModule._wrapped_call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1771\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._compiled_call_impl(*args, **kwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   1772\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1773\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/conda_envs/diffhydro/lib/python3.13/site-packages/torch/nn/modules/module.py:1784\u001b[39m, in \u001b[36mModule._call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1779\u001b[39m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[32m   1780\u001b[39m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[32m   1781\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_pre_hooks\n\u001b[32m   1782\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[32m   1783\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[32m-> \u001b[39m\u001b[32m1784\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1786\u001b[39m result = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1787\u001b[39m called_always_called_hooks = \u001b[38;5;28mset\u001b[39m()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/DiffHydro/diffhydro/interp/cat_interp.py:147\u001b[39m, in \u001b[36mCatchmentInterpolator.forward\u001b[39m\u001b[34m(self, inp)\u001b[39m\n\u001b[32m    145\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, inp):\n\u001b[32m    146\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(inp, DataTensor):\n\u001b[32m--> \u001b[39m\u001b[32m147\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minterpolate_runoff\u001b[49m\u001b[43m(\u001b[49m\u001b[43minp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    148\u001b[39m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(inp, SparseKernel):\n\u001b[32m    149\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.interpolate_kernel(inp.values, inp.coords)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/data_prediction005/SYSTEM/prediction002/home/tristan/workspace/rivers/diffroute_reviews/DiffHydro/diffhydro/interp/cat_interp.py:124\u001b[39m, in \u001b[36mCatchmentInterpolator.interpolate_runoff\u001b[39m\u001b[34m(self, runoff)\u001b[39m\n\u001b[32m    121\u001b[39m weighted_x = runoff.values[:, \u001b[38;5;28mself\u001b[39m.src_idxs] * \u001b[38;5;28mself\u001b[39m.weights[\u001b[38;5;28;01mNone\u001b[39;00m, :, \u001b[38;5;28;01mNone\u001b[39;00m]  \u001b[38;5;66;03m# broadcasts over the time dimension\u001b[39;00m\n\u001b[32m    122\u001b[39m out_size = runoff.shape[\u001b[32m0\u001b[39m], \u001b[38;5;28mself\u001b[39m.n_cats, runoff.shape[-\u001b[32m1\u001b[39m]\n\u001b[32m    123\u001b[39m out = torch.zeros(out_size, \n\u001b[32m--> \u001b[39m\u001b[32m124\u001b[39m                   dtype=\u001b[43mrunoff\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdtype\u001b[49m, device=runoff.device)\n\u001b[32m    125\u001b[39m out.index_add_(\u001b[32m1\u001b[39m, \u001b[38;5;28mself\u001b[39m.dest_idxs, weighted_x)\n\u001b[32m    126\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m datatensor_from_components(\n\u001b[32m    127\u001b[39m     out,\n\u001b[32m    128\u001b[39m     batch_coords=runoff.coords[\u001b[33m\"\u001b[39m\u001b[33mbatch\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m    129\u001b[39m     spatial_coords=to_coord_sequence(\u001b[38;5;28mself\u001b[39m.map_out),\n\u001b[32m    130\u001b[39m     time_coords=runoff.coords[TIME_DIM],\n\u001b[32m    131\u001b[39m )\n",
+      "\u001b[31mAttributeError\u001b[39m: 'DataTensor' object has no attribute 'dtype'"
+     ]
+    }
+   ],
    "source": [
     "from utils.download import download_single_vpu_data\n",
     "download_single_vpu_data(root) # Should format to RAPID."
@@ -55,50 +131,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f247abba-46be-4dde-be8a-c68d7e423c5a",
+   "id": "3d826872-9da4-4c19-9131-84768a1fcfb9",
    "metadata": {},
    "source": [
-    "### Parameters"
+    "### Load input runoffs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "449badee-5faf-4280-aa15-556e680ee465",
+   "execution_count": null,
+   "id": "4a4470b7-060f-4c93-8645-dc4192386cd6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import xarray as xr\n",
-    "\n",
-    "from diffhydro import (LTIRouter, LTIStagedRouter, TimeSeriesThDF, StagedCatchmentInterpolator)\n",
-    "from diffhydro.io import read_rapid_graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "360dfbfa-0a3d-402e-b2f6-7dc12aee3cb9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Routing model parameterss\n",
-    "max_delay = 32\n",
-    "dt = 1/24\n",
-    "# Experiment pathes and variables\n",
-    "device = \"cuda:0\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4d39d278-6796-42ec-81da-6ce46c3eb193",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rapid_config_path = root / 'geoglows' / 'rapid_config' / '305'\n",
-    "runoff_path = root / 'geoglows' / 'input' / '305_daily_sparse_runoff.feather'\n",
-    "interp_weight_path = root / 'geoglows' / 'input' / '305_interp_weight.feather'"
+    "runoff_xr = xr.open_dataarray(rapid_path / \"runoff.nc\")\n",
+    "runoff_xr = runoff_xr.rename({\"river_id\":\"spatial\"}).expand_dims(\"batch\").transpose(\"batch\", \"spatial\", \"time\")\n",
+    "runoff = DataTensor.from_dataarray(runoff_xr).to(device)"
    ]
   },
   {
@@ -106,7 +154,9 @@
    "id": "ce372891-a073-475f-834e-55ef62c2915b",
    "metadata": {},
    "source": [
-    "### 0. Basic Routing"
+    "### 0. Basic Routing\n",
+    "\n",
+    "This is a recap of the previous notebook for \"normal\" routing"
    ]
   },
   {
@@ -116,10 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rapid_path = root / \"geoglows\" / \"rapid_config\" / \"305\"\n",
-    "# Read graph and input runoffs\n",
+    "# Load graph\n",
     "g = read_rapid_graph(rapid_path).to(device)\n",
-    "runoff = TimeSeriesThDF.from_pandas(xr.open_dataarray(rapid_path / \"runoff.nc\").to_pandas()).to(device)\n",
     "# Instantiate the routing model\n",
     "model = LTIRouter(max_delay=max_delay, dt=dt).to(device)\n",
     "# Execute routing\n",
@@ -136,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "800a1ea6-c7ae-48ec-9857-61ccd9353079",
    "metadata": {},
    "outputs": [],
@@ -192,7 +240,19 @@
    "id": "90f9195a-bd7e-4275-8999-84bd8e537ee8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def time_chunk_generator(datatensor, chunk_size, init_window):\n",
+    "    \"\"\"\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "\n",
+    "def coalesce_time_chunks(chunk_seq, init_window):\n",
+    "    \"\"\"\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,14 +298,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4fd38f4e-b051-4b73-8454-e2060595e0f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32ce1a73-5e2e-488a-804f-404d378d3d2e",
    "metadata": {},
    "outputs": [],
    "source": []
