--- a/examples/1. RAPID IO.ipynb
+++ b/examples/1. RAPID IO.ipynb
@@ -92,7 +92,8 @@
    ],
    "source": [
     "from utils.download import download_single_vpu_data, download_rapid_config, process_single_vpu_data\n",
-    "download_single_vpu_data(root)"
+    "\n",
+    "#download_single_vpu_data(root)"
    ]
   },
   {
