--- a/examples/3. Large Scale Routing Simulation.ipynb
+++ b/examples/3. Large Scale Routing Simulation.ipynb
@@ -91,8 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import sys; sys.path.insert(0, \"..\") # Needed to access the download utilities\n",
-    "#from utils.download import download_full_geoglows_data\n",
+    "from utils.download import download_full_geoglows_data\n",
     "#download_full_geoglows_data(root, exclude_discharge=True)"
    ]
   },
@@ -103,20 +102,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pixel_runoff = xt.read_feather(runoff_path, dims=[\"time\", \"spatial\"]).to(device=device) #, dtype=torch.half\n",
+    "pixel_runoff = xt.read_feather(runoff_path, dims=[\"time\", \"spatial\"]).to(device=device)\n",
     "pixel_runoff = pixel_runoff.sel(time=slice(None, \"2019\")).expand_dims(\"batch\").transpose(\"batch\", \"spatial\", \"time\") / (3600. * 24)\n",
     "cat_interp_df = pd.read_feather(interp_weight_path).set_index(\"river_id\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ba1cb6c7-2f16-4de9-bee6-f100c0144111",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pixel_runoff.values = pixel_runoff.values.half()\n",
-    "#pixel_runoff[\"time\"].dtype"
    ]
   },
   {
@@ -143,9 +131,8 @@
     }
    ],
    "source": [
-    "#vpus = [x for x in vpu_config_path.glob(\"*\") if not x.name.startswith(\".\")]\n",
-    "#g = read_multiple_rapid_graphs(vpus, plength_thr=plength_thr, node_thr=node_thr).to(device)\n",
-    "%time g = pd.read_pickle(\"./gg.pkl\").to(device)"
+    "vpus = [x for x in vpu_config_path.glob(\"*\") if not x.name.startswith(\".\")]\n",
+    "g = read_multiple_rapid_graphs(vpus, plength_thr=plength_thr, node_thr=node_thr).to(device)"
    ]
   },
   {
